--- a/scramble.css
+++ b/scramble.css
@@ -96,7 +96,14 @@ div.dragcontainer {
     position:absolute;
 }
 
-div.dragme {
+div.shuffled {
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    -o-user-select:none;
+    user-select:none;
+
     z-index:5;
     font-size:24px;
     float:left;
